Fixed card clipping issue

--- a/public/scss/_portfolio.scss
+++ b/public/scss/_portfolio.scss
@@ -138,7 +138,7 @@ $primary-gradient: linear-gradient(135deg, #743ad5 0%, #d53a9d 100%);
       .card {
         width: 90%;
         .card-bottom-content {
-          height: 300px;
+          height: 360px;
         }
       }
     }
@@ -171,7 +171,7 @@ $primary-gradient: linear-gradient(135deg, #743ad5 0%, #d53a9d 100%);
     .portfolio-item {
       .card {
         .card-bottom-content {
-          height: 300px;
+          height: 350px;
         }
       }
     }
